fix rdb section z-index

--- a/src/conferences/rdb/sass/components/_section.sass
+++ b/src/conferences/rdb/sass/components/_section.sass
@@ -71,6 +71,8 @@
 	&__container
 		padding: 0 100px
 		max-width: 875px
+		z-index: 1
+		position: relative
 		+md
 			padding: 0 30px
 			max-width: 410px
